--- a/00_install_versions.ipynb
+++ b/00_install_versions.ipynb
@@ -163,7 +163,7 @@
      "output_type": "stream",
      "text": [
       "Matplotlib Version: 2.0.2\n",
-      "3.5.2 (default, Nov 17 2016, 17:05:23) \n",
+      "3.5.2 (default, Sep 14 2017, 22:51:06) \n",
       "[GCC 5.4.0 20160609]\n"
      ]
     }
@@ -210,7 +210,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Python Environment Variable - PYTHONPATH: []\n"
+      "Python Environment Variable - PYTHONPATH: ['', '/opt/movidius/caffe/python']\n"
      ]
     }
    ],
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -328,6 +328,15 @@
    "source": [
     "### Congratulations!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
