--- a/1_OpenCV_Basics.ipynb
+++ b/1_OpenCV_Basics.ipynb
@@ -275,7 +275,7 @@
    "source": [
     "# Draw a line using cv2.line(image, startPoint, endPoint, rgb, thinkness)\n",
     "cv2.line(img, (0,0), (300,300), (255,255,0), 5)\n",
-    "# => Diagonal red line with thickness of 5 px\n",
+    "# => Diagonal yellow line with thickness of 5 px\n",
     "\n",
     "# Draw a rectangle using cv2.rectangle(image, topLeft, bottomRight, rgb, thinkness)\n",
     "cv2.rectangle(img, (0,300), (510,128), (0,255,0), 3)\n",
@@ -283,11 +283,11 @@
     "\n",
     "# Draw a circle using cv2.circle(image, center, radius, rgb, thinkness)\n",
     "cv2.circle(img, (200,63), 63, (0,255,0), -1)\n",
-    "# => Blue filled circle(note that the thinkness is -1)\n",
+    "# => Green filled circle(note that the thinkness is -1)\n",
     "\n",
     "# Draw a ellipse using cv2.ellipse(image, center, axes, angle, startAngle, endAngle, rgb, thinkness)\n",
     "cv2.ellipse(img, (100,256), (100,50), -45, 0, 180, (0,0,255), -1)\n",
-    "# => Red wide down-half ellipse\n",
+    "# => Blue wide down-half ellipse\n",
     "\n",
     "plt.imshow(img)"
    ]
