--- a/OpenCV_Exercises/OpenCV_Face_Detection.ipynb
+++ b/OpenCV_Exercises/OpenCV_Face_Detection.ipynb
@@ -72,7 +72,7 @@
    "source": [
     "# Create the haar cascade\n",
     "#cascPath = 'haar_files/haarcascade_frontalface_alt.xml'\n",
-    "cascPath = 'haar_files/haarcascade_frontalface_default.xml'\n",
+    "cascPath = '../haar_files/haarcascade_frontalface_default.xml'\n",
     "faceCascade = cv2.CascadeClassifier(cascPath)\n",
     "print(faceCascade)"
    ]
@@ -105,7 +105,7 @@
    ],
    "source": [
     "# Read the image and show before running face detection\n",
-    "img = cv2.imread('images/people.jpg')\n",
+    "img = cv2.imread('../images/people.jpg')\n",
     "plt.imshow(cv2.cvtColor(img, cv2.COLOR_BGR2RGB))"
    ]
   },
@@ -168,10 +168,10 @@
    ],
    "source": [
     "# run method\n",
-    "image_path = 'images/people.jpg'\n",
+    "image_path = '../images/people.jpg'\n",
     "\n",
     "#cascPath = 'haar_files/haarcascade_frontalface_alt.xml'\n",
-    "cascPath = 'haar_files/haarcascade_frontalface_default.xml'\n",
+    "cascPath = '../haar_files/haarcascade_frontalface_default.xml'\n",
     "\n",
     "detect_faces_show(image_path, cascPath)"
    ]
@@ -193,7 +193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
