final test with up2 board

--- a/OpenCV_Exercises/Install_OpenCV_Python.ipynb
+++ b/OpenCV_Exercises/Install_OpenCV_Python.ipynb
@@ -23,13 +23,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Next import print_function for Python 2/3 comptibility. This allows use of print like a function in Python 2.x"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -40,68 +33,75 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Package          Version    \r\n",
-      "---------------- -----------\r\n",
-      "absl-py          0.2.2      \r\n",
-      "astor            0.6.2      \r\n",
-      "backcall         0.1.0      \r\n",
-      "bleach           1.5.0      \r\n",
-      "certifi          2018.4.16  \r\n",
-      "cycler           0.10.0     \r\n",
-      "decorator        4.3.0      \r\n",
-      "entrypoints      0.2.3      \r\n",
-      "gast             0.2.0      \r\n",
-      "grpcio           1.12.0     \r\n",
-      "html5lib         0.9999999  \r\n",
-      "imutils          0.4.6      \r\n",
-      "ipykernel        4.8.2      \r\n",
-      "ipython          6.4.0      \r\n",
-      "ipython-genutils 0.2.0      \r\n",
-      "jedi             0.12.0     \r\n",
-      "Jinja2           2.10       \r\n",
-      "jsonschema       2.6.0      \r\n",
-      "jupyter-client   5.2.3      \r\n",
-      "jupyter-core     4.4.0      \r\n",
-      "kiwisolver       1.0.1      \r\n",
-      "Markdown         2.6.11     \r\n",
-      "MarkupSafe       1.0        \r\n",
-      "matplotlib       2.2.2      \r\n",
-      "mistune          0.8.3      \r\n",
-      "nbconvert        5.3.1      \r\n",
-      "nbformat         4.4.0      \r\n",
-      "notebook         5.5.0      \r\n",
-      "numpy            1.14.3     \r\n",
-      "opencv-python    3.4.1.15   \r\n",
-      "pandocfilters    1.4.2      \r\n",
-      "parso            0.2.0      \r\n",
-      "pexpect          4.5.0      \r\n",
-      "pickleshare      0.7.4      \r\n",
-      "pip              10.0.1     \r\n",
-      "prompt-toolkit   1.0.15     \r\n",
-      "protobuf         3.5.2.post1\r\n",
-      "psutil           5.4.5      \r\n",
-      "ptyprocess       0.5.2      \r\n",
-      "Pygments         2.2.0      \r\n",
-      "pyparsing        2.2.0      \r\n",
-      "python-dateutil  2.7.3      \r\n",
-      "pytz             2018.4     \r\n",
-      "pyzmq            17.0.0     \r\n",
-      "Send2Trash       1.5.0      \r\n",
-      "setuptools       39.1.0     \r\n",
-      "simplegeneric    0.8.1      \r\n",
-      "six              1.11.0     \r\n",
-      "tensorboard      1.8.0      \r\n",
-      "tensorflow       1.8.0      \r\n",
-      "termcolor        1.1.0      \r\n",
-      "terminado        0.8.1      \r\n",
-      "testpath         0.3.1      \r\n",
-      "tornado          5.0.2      \r\n",
-      "traitlets        4.3.2      \r\n",
-      "utils            0.9.0      \r\n",
-      "wcwidth          0.1.7      \r\n",
-      "webencodings     0.5.1      \r\n",
-      "Werkzeug         0.14.1     \r\n",
-      "wheel            0.31.1     \r\n"
+      "Package                            Version    \r\n",
+      "---------------------------------- -----------\r\n",
+      "adium-theme-ubuntu                 0.3.4      \r\n",
+      "backports.shutil-get-terminal-size 1.0.0      \r\n",
+      "bleach                             2.1.2      \r\n",
+      "configparser                       3.5.0      \r\n",
+      "cycler                             0.9.0      \r\n",
+      "decorator                          4.0.11     \r\n",
+      "entrypoints                        0.2.3      \r\n",
+      "enum34                             1.1.6      \r\n",
+      "functools32                        3.2.3.post2\r\n",
+      "html5lib                           1.0.1      \r\n",
+      "imageio                            2.1.2      \r\n",
+      "imutils                            0.4.6      \r\n",
+      "ipykernel                          4.8.0      \r\n",
+      "ipython                            5.5.0      \r\n",
+      "ipython-genutils                   0.2.0      \r\n",
+      "ipywidgets                         7.1.0      \r\n",
+      "Jinja2                             2.8        \r\n",
+      "jsonschema                         2.6.0      \r\n",
+      "jupyter                            1.0.0      \r\n",
+      "jupyter-client                     5.2.1      \r\n",
+      "jupyter-console                    5.2.0      \r\n",
+      "jupyter-core                       4.4.0      \r\n",
+      "MarkupSafe                         0.23       \r\n",
+      "matplotlib                         1.5.1      \r\n",
+      "mistune                            0.8.3      \r\n",
+      "moviepy                            0.2.3.2    \r\n",
+      "mvnc                               1.12.0.1   \r\n",
+      "nbconvert                          5.3.1      \r\n",
+      "nbformat                           4.4.0      \r\n",
+      "notebook                           5.3.1      \r\n",
+      "numpy                              1.14.0     \r\n",
+      "opencv-python                      3.4.1.15   \r\n",
+      "paho-mqtt                          1.3.1      \r\n",
+      "pandocfilters                      1.4.2      \r\n",
+      "pathlib2                           2.3.0      \r\n",
+      "pexpect                            4.0.1      \r\n",
+      "pickleshare                        0.7.4      \r\n",
+      "Pillow                             5.0.0      \r\n",
+      "pip                                10.0.1     \r\n",
+      "prompt-toolkit                     1.0.15     \r\n",
+      "psutil                             5.4.5      \r\n",
+      "ptyprocess                         0.5        \r\n",
+      "pycurl                             7.43.0     \r\n",
+      "Pygments                           2.2.0      \r\n",
+      "PyMySQL                            0.7.2      \r\n",
+      "pyparsing                          2.0.3      \r\n",
+      "Pyste                              0.9.10     \r\n",
+      "python-dateutil                    2.4.2      \r\n",
+      "pytz                               2014.10    \r\n",
+      "pywatchman                         1.3.0      \r\n",
+      "pyzmq                              15.2.0     \r\n",
+      "qtconsole                          4.3.1      \r\n",
+      "scandir                            1.6        \r\n",
+      "Send2Trash                         1.4.2      \r\n",
+      "setuptools                         20.7.0     \r\n",
+      "simplegeneric                      0.8.1      \r\n",
+      "six                                1.10.0     \r\n",
+      "terminado                          0.8.1      \r\n",
+      "testpath                           0.3.1      \r\n",
+      "tornado                            4.2.1      \r\n",
+      "tqdm                               4.11.2     \r\n",
+      "traitlets                          4.3.2      \r\n",
+      "unity-lens-photos                  1.0        \r\n",
+      "wcwidth                            0.1.7      \r\n",
+      "webencodings                       0.5.1      \r\n",
+      "wheel                              0.29.0     \r\n",
+      "widgetsnbextension                 3.1.0      \r\n"
      ]
     }
    ],
@@ -119,8 +119,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: opencv-python in /home/intelnuc/anaconda3/envs/tensorflow/lib/python3.6/site-packages (3.4.1.15)\r\n",
-      "Requirement already satisfied: numpy>=1.11.3 in /home/intelnuc/anaconda3/envs/tensorflow/lib/python3.6/site-packages (from opencv-python) (1.14.3)\r\n"
+      "Requirement already satisfied: opencv-python in /usr/local/lib/python2.7/dist-packages (3.4.1.15)\n",
+      "Requirement already satisfied: numpy>=1.11.1 in /usr/local/lib/python2.7/dist-packages (from opencv-python) (1.14.0)\n"
      ]
     }
    ],
@@ -151,7 +151,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "OpenCV Version: 3.4.1\n"
+      "('OpenCV Version:', '3.4.1')\n"
      ]
     }
    ],
@@ -175,7 +175,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NumPy Version: 1.14.3\n"
+      "('NumPy Version:', '1.14.0')\n"
      ]
     }
    ],
@@ -208,17 +208,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: matplotlib in /home/intelnuc/anaconda3/envs/tensorflow/lib/python3.6/site-packages (2.2.2)\n",
-      "Requirement already satisfied: imutils in /home/intelnuc/anaconda3/envs/tensorflow/lib/python3.6/site-packages (0.4.6)\n",
-      "Requirement already satisfied: psutil in /home/intelnuc/anaconda3/envs/tensorflow/lib/python3.6/site-packages (5.4.5)\n",
-      "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /home/intelnuc/anaconda3/envs/tensorflow/lib/python3.6/site-packages (from matplotlib) (2.2.0)\n",
-      "Requirement already satisfied: python-dateutil>=2.1 in /home/intelnuc/anaconda3/envs/tensorflow/lib/python3.6/site-packages (from matplotlib) (2.7.3)\n",
-      "Requirement already satisfied: numpy>=1.7.1 in /home/intelnuc/anaconda3/envs/tensorflow/lib/python3.6/site-packages (from matplotlib) (1.14.3)\n",
-      "Requirement already satisfied: cycler>=0.10 in /home/intelnuc/anaconda3/envs/tensorflow/lib/python3.6/site-packages (from matplotlib) (0.10.0)\n",
-      "Requirement already satisfied: six>=1.10 in /home/intelnuc/anaconda3/envs/tensorflow/lib/python3.6/site-packages (from matplotlib) (1.11.0)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in /home/intelnuc/anaconda3/envs/tensorflow/lib/python3.6/site-packages (from matplotlib) (1.0.1)\n",
-      "Requirement already satisfied: pytz in /home/intelnuc/anaconda3/envs/tensorflow/lib/python3.6/site-packages (from matplotlib) (2018.4)\n",
-      "Requirement already satisfied: setuptools in /home/intelnuc/anaconda3/envs/tensorflow/lib/python3.6/site-packages (from kiwisolver>=1.0.1->matplotlib) (39.1.0)\n"
+      "Requirement already satisfied: matplotlib in /usr/lib/python2.7/dist-packages (1.5.1)\r\n",
+      "Requirement already satisfied: imutils in /usr/local/lib/python2.7/dist-packages (0.4.6)\r\n",
+      "Requirement already satisfied: psutil in /usr/local/lib/python2.7/dist-packages (5.4.5)\r\n"
      ]
     }
    ],
@@ -264,9 +256,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Matplotlib Version: 2.2.2\n",
-      "3.6.2 |Continuum Analytics, Inc.| (default, Jul 20 2017, 13:51:32) \n",
-      "[GCC 4.4.7 20120313 (Red Hat 4.4.7-1)]\n"
+      "('Matplotlib Version:', '1.5.1')\n",
+      "2.7.12 (default, Dec  4 2017, 14:50:18) \n",
+      "[GCC 5.4.0 20160609]\n"
      ]
     }
    ],
@@ -310,7 +302,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Python Environment Variable - PYTHONPATH: ['', '/opt/movidius/caffe/python']\n"
+      "('Python Environment Variable - PYTHONPATH:', [])\n"
      ]
     }
    ],
@@ -373,21 +365,21 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
